--- a/SendMail.csproj
+++ b/SendMail.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="1.18.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
